my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ECYCLICTRAIT_template/ECYCLICTRAIT_template.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT_template.dml:11:5: error ECYCLICTEMPLATE: cyclic template inheritance
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT_template.dml:16:5: via here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT_template.dml:21:5: via here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT_template.dml:26:5: via here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECYCLICTRAIT_template.dml:36:13: error ECYCLICTEMPLATE: cyclic template inheritance
